fix(core): ton of fixes